# bifrost-mkdocs

./: .gitignore  .lefthook.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  justfile  mise.toml  mkdocs.yaml  package.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: check.yml  codeql.yml  deploy-docs.yml  publish.yml  release-please.yml  sync-vendored-css.yml
docs/: .nav.yml  index.md
docs/assets/stylesheets/: extra.css
docs/showcase/: .nav.yml  abbreviations.md  admonitions.md  attributes.md  buttons.md  cards.md  code-blocks.md  content-tabs.md  diagrams.md  footnotes.md  grid-cards.md  highlighter.md  icons-emojis.md  index.md  keyboard-keys.md  lists.md  math.md  messages.md  smart-symbols.md  snippets.md  tables.md  tabs.md  typography.md
scripts/: sync-bifrost-css.sh
src/intility_bifrost_mkdocs/: __init__.py  plugin.py  table_ext.py
src/intility_bifrost_mkdocs/overrides/: main.html
src/intility_bifrost_mkdocs/overrides/assets/stylesheets/: bifrost.css
src/intility_bifrost_mkdocs/overrides/assets/stylesheets/bifrost/: admonitions.css  base.css  cards.css  checkbox.css  code.css  footer.css  highlighter.css  mermaid.css  misc.css  nav.css  search.css  table.css  tabs.css  tokens.css
src/intility_bifrost_mkdocs/overrides/javascripts/: bifrost-theme.js
tests/: test_plugin.py  test_table_ext.py  test_vendored.py
tests/javascripts/: bifrost-theme.test.js
theme/: README.md  main.html
theme/assets/stylesheets/: bifrost.css
