[project]
name = "intility-bifrost-mkdocs"
version = "0.5.0"
description = "Intility Bifrost theme plugin for MkDocs Material"
authors = [
    { name = "Erlend Ellefsen", email = "erlend.ellefsen@intility.no" },
]
keywords = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-plugin",
    "documentation",
    "bifrost",
    "intility",
    "theme",
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: MkDocs",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0,<10",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "markdown-callouts>=0.4",
]

[project.optional-dependencies]
dev = [
    "livereload>=2.7.1",
    "ruff>=0.15.0",
    "pytest>=9.0.0",
]

[project.urls]
Homepage = "https://intility.github.io/bifrost-mkdocs"
Documentation = "https://intility.github.io/bifrost-mkdocs"
Repository = "https://github.com/intility/bifrost-mkdocs"
Issues = "https://github.com/intility/bifrost-mkdocs/issues"
Changelog = "https://github.com/intility/bifrost-mkdocs/blob/main/CHANGELOG.md"

[project.entry-points."mkdocs.plugins"]
intility-bifrost = "intility_bifrost_mkdocs.plugin:IntilityBifrostPlugin"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
intility_bifrost_mkdocs = [
    "overrides/**/*.html",
    "overrides/**/*.css",
    "overrides/**/*.woff2",
    "overrides/**/*.js",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["intility_bifrost_mkdocs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
